new changes for perfomace

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@ License: https://nexnovatechnologies.com/license
         <div class="tech-image-container">
           <div class="floating-dots dots-1"></div>
           <div class="floating-dots dots-2"></div>
-          <img src="img/about.jpg" alt="Technology Innovation" class="tech-image">
+          <img src="img/about.svg" alt="The Founder of Nexnova Technologies is Adul M" class="tech-image">
         </div>
       </div>
     </div>
@@ -447,7 +447,7 @@ License: https://nexnovatechnologies.com/license
       <div class="clients-grid">
         <div class="client-card">
           <div class="client-logo">
-            <img src="img/clients/siff.png" alt="Saudi Indian Football Forum">
+            <img src="img/clients/siff.webp" alt="Saudi Indian Football Forum web by nexnovatechnologies">
           </div>
           <div class="client-info">
             <h5>Saudi Indian Football Forum</h>
@@ -456,7 +456,7 @@ License: https://nexnovatechnologies.com/license
 
         <div class="client-card">
           <div class="client-logo">
-            <img src="img/clients/jp_eduction.jpeg" alt="JP Education Services">
+            <img src="img/clients/jp_eduction.webp" alt="JP Education Services web by nexnovatechnologies">
           </div>
           <div class="client-info">
             <h5>JP Education Services</h5>
@@ -465,7 +465,7 @@ License: https://nexnovatechnologies.com/license
 
         <div class="client-card">
           <div class="client-logo">
-            <img src="img/clients/SwedishPharma.jpeg" alt="Swedish Pharma">
+            <img src="img/clients/SwedishPharma.webp" alt="Swedish Pharma web by nexnovatechnologies">
           </div>
           <div class="client-info">
             <h5>Swedish Pharma</h5>
@@ -474,7 +474,7 @@ License: https://nexnovatechnologies.com/license
 
         <div class="client-card">
           <div class="client-logo">
-            <img src="img/clients/khaleef_png.png" alt="Khaleef Groom Studio">
+            <img src="img/clients/khaleef_png.webp" alt="Khaleef Groom Studio web by nexnovatechnologies">
           </div>
           <div class="client-info">
             <h5>Khaleef Groom Studio</h5>
@@ -483,7 +483,7 @@ License: https://nexnovatechnologies.com/license
 
         <div class="client-card">
           <div class="client-logo">
-            <img src="img/clients/manjari.png" alt="Manjari Books">
+            <img src="img/clients/manjari.webp" alt="Manjari Books web by nexnovatechnologies">
           </div>
           <div class="client-info">
             <h5>Manjari Books</h5>
@@ -492,7 +492,7 @@ License: https://nexnovatechnologies.com/license
 
         <div class="client-card">
           <div class="client-logo">
-            <img src="img/clients/bapoos_yathra.png" alt="Bappoos Yathras">
+            <img src="img/clients/bapoos_yathra.webp" alt="Bappoos Yathras web by nexnovatechnologies">
           </div>
           <div class="client-info">
             <h5>Bappoos Yathras</h5>
@@ -501,7 +501,7 @@ License: https://nexnovatechnologies.com/license
 
         <div class="client-card">
           <div class="client-logo">
-            <img src="img/clients/infinity.png" alt="Infinity Tattoo Studio">
+            <img src="img/clients/infinity.webp" alt="Infinity Tattoo Studio web by nexnovatechnologies">
           </div>
           <div class="client-info">
             <h5>Infinity Tattoo Studio</h5>
@@ -510,7 +510,7 @@ License: https://nexnovatechnologies.com/license
 
         <div class="client-card">
           <div class="client-logo">
-            <img src="img/clients/sminkapng.png" alt="Sminka Bridal Academy">
+            <img src="img/clients/sminkapng.webp" alt="Sminka Bridal Academy web by nexnovatechnologies">
           </div>
           <div class="client-info">
             <h5>Sminka Bridal Academy</h5>
@@ -546,8 +546,8 @@ License: https://nexnovatechnologies.com/license
 
         <div class="col-lg-3 col-md-4">
           <div class="portfolio-item wow fadeInUp">
-            <a href="img/portfolio/1.jpg" class="portfolio-popup">
-              <img src="img/portfolio/1.jpg" alt="">
+            <a href="img/portfolio/1.webp" class="portfolio-popup">
+              <img src="img/portfolio/1.webp" alt="Nexnova Technologies">
               <div class="portfolio-overlay">
                 <div class="portfolio-info">
                   <h2 class="wow fadeInUp">Portfolio Name</h2>
@@ -559,8 +559,8 @@ License: https://nexnovatechnologies.com/license
 
         <div class="col-lg-3 col-md-4">
           <div class="portfolio-item wow fadeInUp">
-            <a href="img/portfolio/2.jpg" class="portfolio-popup">
-              <img src="img/portfolio/2.jpg" alt="">
+            <a href="img/portfolio/2.webp" class="portfolio-popup">
+              <img src="img/portfolio/2.webp" alt="Nexnova Technologies.com">
               <div class="portfolio-overlay">
                 <div class="portfolio-info">
                   <h2 class="wow fadeInUp">Portfolio Name</h2>
@@ -572,8 +572,8 @@ License: https://nexnovatechnologies.com/license
 
         <div class="col-lg-3 col-md-4">
           <div class="portfolio-item wow fadeInUp">
-            <a href="img/portfolio/3.jpeg" class="portfolio-popup">
-              <img src="img/portfolio/3.jpeg" alt="">
+            <a href="img/portfolio/3.webp" class="portfolio-popup">
+              <img src="img/portfolio/3.webp" alt="Nexnova Technologies.in">
               <div class="portfolio-overlay">
                 <div class="portfolio-info">
                   <h2 class="wow fadeInUp">Portfolio Name</h2>
@@ -585,8 +585,8 @@ License: https://nexnovatechnologies.com/license
 
         <div class="col-lg-3 col-md-4">
           <div class="portfolio-item wow fadeInUp">
-            <a href="img/portfolio/4.jpg" class="portfolio-popup">
-              <img src="img/portfolio/4.jpg" alt="">
+            <a href="img/portfolio/4.webp" class="portfolio-popup">
+              <img src="img/portfolio/4.webp" alt="Nexnova Technologies">
               <div class="portfolio-overlay">
                 <div class="portfolio-info">
                   <h2 class="wow fadeInUp">Portfolio Name</h2>
@@ -598,8 +598,8 @@ License: https://nexnovatechnologies.com/license
 
         <div class="col-lg-3 col-md-4">
           <div class="portfolio-item wow fadeInUp">
-            <a href="img/portfolio/5.jpg" class="portfolio-popup">
-              <img src="img/portfolio/5.jpg" alt="">
+            <a href="img/portfolio/5.webp" class="portfolio-popup">
+              <img src="img/portfolio/5.webp" alt="Nexnova Technologies">
               <div class="portfolio-overlay">
                 <div class="portfolio-info">
                   <h2 class="wow fadeInUp">Portfolio Name</h2>
@@ -611,8 +611,8 @@ License: https://nexnovatechnologies.com/license
 
         <div class="col-lg-3 col-md-4">
           <div class="portfolio-item wow fadeInUp">
-            <a href="img/portfolio/6.jpg" class="portfolio-popup">
-              <img src="img/portfolio/6.jpg" alt="">
+            <a href="img/portfolio/6.webp" class="portfolio-popup">
+              <img src="img/portfolio/6.webp" alt="Nexnova Technologies">
               <div class="portfolio-overlay">
                 <div class="portfolio-info">
                   <h2 class="wow fadeInUp">Portfolio Name </h2>
@@ -624,8 +624,8 @@ License: https://nexnovatechnologies.com/license
 
         <div class="col-lg-3 col-md-4">
           <div class="portfolio-item wow fadeInUp">
-            <a href="img/portfolio/7.jpg" class="portfolio-popup">
-              <img src="img/portfolio/7.jpg" alt="">
+            <a href="img/portfolio/7.webp" class="portfolio-popup">
+              <img src="img/portfolio/7.webp" alt="Nexnova Technologies">
               <div class="portfolio-overlay">
                 <div class="portfolio-info">
                   <h2 class="wow fadeInUp">Portfolio Name </h2>
@@ -637,8 +637,8 @@ License: https://nexnovatechnologies.com/license
 
         <div class="col-lg-3 col-md-4">
           <div class="portfolio-item wow fadeInUp">
-            <a href="img/portfolio/8.jpg" class="portfolio-popup">
-              <img src="img/portfolio/8.jpg" alt="">
+            <a href="img/portfolio/8.webp" class="portfolio-popup">
+              <img src="img/portfolio/8.webp" alt="Nexnova Technologies">
               <div class="portfolio-overlay">
                 <div class="portfolio-info">
                   <h2 class="wow fadeInUp">Portfolio Name</h2>
@@ -661,7 +661,9 @@ License: https://nexnovatechnologies.com/license
       <div class="testimonials-header">
         <h2>What Our Clients Say</h2>
         <p>Discover how we're helping businesses transform their digital presence and achieve remarkable results through
-          innovative technology solutions.</p>
+          innovative technology solutions.<br><a href="https://g.page/r/CZ5fRdFuiW5HEAE/review">Click here to read more
+            reviews</a></p>
+
       </div>
 
       <div class="testimonials-grid">
@@ -685,16 +687,25 @@ License: https://nexnovatechnologies.com/license
         <div class="testimonial-card">
           <div class="testimonial-content">
             <div class="quote-icon">❝</div>
-            <p class="testimonial-text">I recently received a poster from Nexnova Technologies, and I am truly impressed
-              with the design and quality. The poster is visually appealing, with a modern and professional layout that
-              perfectly represents our brand.</p>
+            <p class="testimonial-text">I recently got my new website designed by Nexnova Technologies, and Im happier
+              with the result! The team was highly
+              professional, creative, and attentive to my requirements. They brought my vision to life with a sleek,
+              modern design
+              that's both user-friendly and visually stunning. Their communication throughout the process was excellent,
+              and they
+              delivered everything on time. I highly recommend Nexnova Technologies to anyone looking for top-notch
+              website design
+              services! THANKYOU❤️</p>
             <div class="testimonial-author">
               <div class="author-info">
-                <h3>Sayana K</h3>
+                <h3>Sathpriyan</h3>
+                <h4>Infinity Tattoo Studio</h4>
               </div>
             </div>
           </div>
         </div>
+
+
 
         <div class="testimonial-card">
           <div class="testimonial-content">
@@ -712,6 +723,8 @@ License: https://nexnovatechnologies.com/license
           </div>
         </div>
       </div>
+
+
     </div>
   </section>
 
@@ -730,7 +743,8 @@ License: https://nexnovatechnologies.com/license
           <a class="cta-btn align-middle" href="#contact">Contact Us</a>
         </div>
         <div class="col-lg-6 cta-btn-container text-center">
-          <img src="img/about.jpg" alt="Nexnova Technologies About">
+          <img src="img/about.svg" alt="We aim to push the
+            boundaries of technology, empowering developers and creating a space where creativity thrives.">
         </div>
       </div>
 
@@ -751,7 +765,7 @@ License: https://nexnovatechnologies.com/license
       <div class="team-grid">
         <div class="team-card">
           <div class="profile-img">
-            <img src="img/adul.jpg" alt="Adulusman">
+            <img src="img/adul.webp" alt="Adulusman, the Founder of Nexnova Technologies , Adul M">
           </div>
           <h3>Adul</h3>
           <p>Chief Executive Officer</p>
@@ -779,7 +793,7 @@ License: https://nexnovatechnologies.com/license
 
         <div class="team-card">
           <div class="profile-img">
-            <img src="img/shaima.jpeg" alt="Expert App Developers at Nexnova Technologies">
+            <img src="img/shaima.webp" alt="Co-founder of Nexnova Technologies">
           </div>
           <h3>Shaima Raiheen</h3>
           <p>Chief Technology Officer</p>
@@ -801,7 +815,7 @@ License: https://nexnovatechnologies.com/license
 
         <div class="team-card">
           <div class="profile-img">
-            <img src="img/basith.jpg" alt="Expert App Developers at Nexnova Technologies">
+            <img src="img/basith.webp" alt="Expert Web Developer at Nexnova Technologies">
           </div>
           <h3>Ahammed Basith</h3>
           <p>Senior Software Engineer</p>
