--- a/template_majlis.html
+++ b/template_majlis.html
@@ -10,34 +10,47 @@
             text-align: center;
             font-family: Arial, sans-serif;
             background-color: #23358d;
-        }
-        
-
-        canvas {
-            border: 1px solid #ccc;
-            max-width: 100%;
-            height: auto;
-            background-color: white;
+            margin: 0;
+            padding: 20px;
+            box-sizing: border-box;
         }
 
         .container {
-            width: 90%;
-            max-width: 400px;
-            margin: auto;
+            width: 100%;
+            max-width: 800px;
+            margin: 0 auto;
             background: white;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-sizing: border-box;
+        }
+
+        canvas {
+            border: 1px solid #ccc;
+            width: 100%;
+            height: auto;
+            max-width: 800px;
+            background-color: white;
+            margin: 20px 0;
+        }
+
+        .controls {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            margin-bottom: 20px;
         }
 
         input,
         button {
             width: 100%;
             padding: 12px;
-            margin: 5px 0;
+            margin: 0;
             font-size: 16px;
-            border: none;
+            border: 1px solid #ccc;
             border-radius: 5px;
+            box-sizing: border-box;
         }
 
         button {
@@ -46,6 +59,7 @@
             font-weight: bold;
             cursor: pointer;
             transition: 0.3s;
+            border: none;
         }
 
         button:hover {
@@ -53,15 +67,14 @@
         }
 
         .pricing {
-
             margin-top: 40px;
-            text-align: center;
         }
 
         .pricing-table {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            padding: 20px;
         }
 
         .pricing-plan {
@@ -69,18 +82,47 @@
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            margin: 10px;
-            width: 250px;
-            text-align: center;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
         }
 
         .pricing-plan h3 {
             color: #007bff;
+            margin: 0;
         }
 
         .pricing-plan p {
-            font-size: 18px;
+            font-size: 16px;
+            margin: 5px 0;
+        }
+
+        .price {
+            font-size: 24px;
             font-weight: bold;
+            color: #007bff;
+        }
+
+        @media (max-width: 768px) {
+            body {
+                padding: 10px;
+            }
+
+            .container {
+                padding: 15px;
+            }
+
+            canvas {
+                margin: 10px 0;
+            }
+
+            .pricing-table {
+                padding: 10px;
+            }
+
+            .pricing-plan {
+                padding: 15px;
+            }
         }
     </style>
 </head>
@@ -88,11 +130,13 @@
 <body>
     <div class="container">
         <h2>Upload Your Image & Enter Your Name</h2>
-        <input type="file" id="imageUpload" accept="image/*"><br>
-        <input type="text" id="nameInput" placeholder="Enter your name"><br>
-        <button onclick="generateImage()">Generate Image</button>
-        <button onclick="downloadImage()">Download</button>
-        <canvas id="canvas" width="800" height="800"></canvas>
+        <div class="controls">
+            <input type="file" id="imageUpload" accept="image/*">
+            <input type="text" id="nameInput" placeholder="Enter your name">
+            <button onclick="generateImage()">Generate Image</button>
+            <button onclick="downloadImage()">Download</button>
+        </div>
+        <canvas id="canvas"></canvas>
     </div>
 
     <div class="pricing">
@@ -100,21 +144,21 @@
         <div class="pricing-table">
             <div class="pricing-plan">
                 <h3>Basic</h3>
-                <p>₹499</p>
+                <p class="price">₹499</p>
                 <p>Single Template</p>
                 <p>HD Quality</p>
                 <button onclick="redirectToWhatsApp('Basic')">Choose Plan</button>
             </div>
             <div class="pricing-plan">
                 <h3>Premium</h3>
-                <p>₹999</p>
+                <p class="price">₹999</p>
                 <p>3 Templates</p>
                 <p>Custom Design</p>
                 <button onclick="redirectToWhatsApp('Premium')">Choose Plan</button>
             </div>
             <div class="pricing-plan">
                 <h3>Business</h3>
-                <p>₹1999</p>
+                <p class="price">₹1999</p>
                 <p>Unlimited Templates</p>
                 <p>Branding Support</p>
                 <button onclick="redirectToWhatsApp('Business')">Choose Plan</button>
@@ -125,11 +169,30 @@
     <script>
         const canvas = document.getElementById("canvas");
         const ctx = canvas.getContext("2d");
+
+        // Set canvas size based on device
+        function setCanvasSize() {
+            const containerWidth = canvas.parentElement.clientWidth;
+            const size = Math.min(containerWidth, 800);
+            canvas.width = size;
+            canvas.height = size;
+            return size;
+        }
+
+        // Initial canvas size
+        let canvasSize = setCanvasSize();
+
+        // Update canvas size on window resize
+        window.addEventListener('resize', () => {
+            canvasSize = setCanvasSize();
+            generateImage();
+        });
+
         const template = new Image();
         template.src = "img/templates_image/My_Majlis.svg";
 
         template.onload = function () {
-            ctx.drawImage(template, 0, 0, canvas.width, canvas.height);
+            generateImage();
         };
 
         function generateImage() {
@@ -137,7 +200,7 @@
             ctx.drawImage(template, 0, 0, canvas.width, canvas.height);
 
             const file = document.getElementById("imageUpload").files[0];
-            let name = document.getElementById("nameInput").value;
+            const name = document.getElementById("nameInput").value;
 
             if (file) {
                 const reader = new FileReader();
@@ -163,11 +226,11 @@
             }
 
             if (name) {
-                name = name.toUpperCase();
-                ctx.font = "bold 2.5vw Georgia";
+                const fontSize = Math.floor(canvas.width * 0.025);
+                ctx.font = `bold ${fontSize}px Georgia`;
                 ctx.fillStyle = "black";
                 ctx.textAlign = "center";
-                ctx.fillText(name, canvas.width * 0.335, canvas.height * 0.635);
+                ctx.fillText(name.toUpperCase(), canvas.width * 0.335, canvas.height * 0.635);
             }
         }
 
