--- a/template_majlis.html
+++ b/template_majlis.html
@@ -229,8 +229,8 @@
 
         function downloadImage() {
             const link = document.createElement("a");
-            link.download = "customized_template.png";
-            link.href = canvas.toDataURL("image/png");
+            link.download = "customized_template.jpg";
+            link.href = canvas.toDataURL("image/jpg");
             link.click();
         }
 
