--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ License: https://nexnovatechnologies.com/license
       <h2>Why Refer Nexnova?</h2>
       <div class="stats">
         <div class="stat-item">
-          <div class="stat-number" data-target="26000">0</div>
+          <div class="stat-number" data-target="76000">0</div>
           <p>₹ Referrals Rewarded</p>
         </div>
         <div class="stat-item">
@@ -514,6 +514,42 @@ License: https://nexnovatechnologies.com/license
           </div>
           <div class="client-info">
             <h5>Sminka Bridal Academy</h5>
+          </div>
+        </div>
+        <div class="client-card">
+          <div class="client-logo">
+            <img src="img/clients/kerlabookofrecords.png"
+              alt="Kerala book of records web app by nexnovatechnologies https://nexnovatechnologies.in  https://kerlabookofrecords.in/">
+          </div>
+          <div class="client-info">
+            <h5>Kerala book of Records</h5>
+          </div>
+        </div>
+        <div class="client-card">
+          <div class="client-logo">
+            <img src="img/clients/godwinrosh.svg"
+              alt="godwinrosh web app by nexnovatechnologies https://nexnovatechnologies.in  https://godwinrosh.in/">
+          </div>
+          <div class="client-info">
+            <h5>Godwin Rosh</h5>
+          </div>
+        </div>
+        <div class="client-card">
+          <div class="client-logo">
+            <img src="img/clients/godwinrosh.svg"
+              alt="godwinrosh web by nexnovatechnologies https://nexnovatechnologies.in  https://godwinrosh.in/">
+          </div>
+          <div class="client-info">
+            <h5>Godwin Rosh</h5>
+          </div>
+        </div>
+        <div class="client-card">
+          <div class="client-logo">
+            <img src="img/clients/lion_mayura_logo.png"
+              alt="Lion Mayura web by nexnovatechnologies https://nexnovatechnologies.in">
+          </div>
+          <div class="client-info">
+            <h5>Lion Mayura</h5>
           </div>
         </div>
 
@@ -822,6 +858,9 @@ License: https://nexnovatechnologies.com/license
     </section>
 
     <!--==========================
+ 
+ 
+ 
   Call To Action Section
 ============================-->
     <section id="call-to-action" class="wow fadeInUp">
@@ -924,6 +963,25 @@ License: https://nexnovatechnologies.com/license
         </div>
       </div>
     </section>
+
+
+
+
+
+
+
+    <!--==========================
+      Instagram Section
+    ============================-->
+
+
+
+    <iframe src="https://www.juicer.io/api/feeds/nexnova-technologies/iframe" frameborder="0" width="1000" height="1000"
+      style="display:block;margin:0 auto;"></iframe>
+
+
+
+
     <!--==========================
       Contact Section
     ============================-->
@@ -1000,13 +1058,6 @@ License: https://nexnovatechnologies.com/license
         </div>
       </div>
 
-      <div class="container mb-4 map">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3916.668777961457!2d76.1850367!3d10.988354199999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba7cd227918fa55%3A0x476e896ed1455f9e!2sNexnova%20Technologies!5e0!3m2!1sen!2sin!4v1736012233331!5m2!1sen!2sin"
-          width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
-
 
 
     </section><!-- #contact -->
@@ -1028,6 +1079,7 @@ License: https://nexnovatechnologies.com/license
     <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
     <!-- JavaScript  -->
+
     <script src="lib/jquery/jquery.min.js"></script>
     <script src="lib/jquery/jquery-migrate.min.js"></script>
     <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
