--- a/index.html
+++ b/index.html
@@ -72,6 +72,17 @@ License: https://nexnovatechnologies.com/license
       "name": "Nexnova Technologies Pvt Ltd",
       "url": "https://nexnovatechnologies.in/"
     }
+     "sameAs": [
+      "https://www.linkedin.com/company/nexnova-technologies",
+      "https://www.instagram.com/nexnova.technologies",
+      "https://github.com/adulusman",
+      "https://nexnovatechnologies.setmore.com/nexnova",
+      "https://www.facebook.com/nexnova.technologies",
+      "https://www.adulusman.web.app",
+      "https://www.threads.com/@nexnova.technologies"
+
+      
+    ]
   }
   </script>
 
