--- a/index.html
+++ b/index.html
@@ -538,11 +538,11 @@ License: https://nexnovatechnologies.com/license
         </div>
         <div class="client-card">
           <div class="client-logo">
-            <img src="img/clients/godwinrosh.svg"
-              alt="godwinrosh web app by nexnovatechnologies https://nexnovatechnologies.in  https://godwinrosh.in/">
+            <img src="img/clients/kmcc-logo.webp"
+              alt="godwinrosh web app by nexnovatechnologies https://nexnovatechnologies.in  https://kmcc-78931.web.app/">
           </div>
           <div class="client-info">
-            <h5>Godwin Rosh</h5>
+            <h5>KMCC Saudi</h5>
           </div>
         </div>
         <div class="client-card">
@@ -597,7 +597,7 @@ License: https://nexnovatechnologies.com/license
               <img src="img/portfolio/1.webp" alt="Nexnova Technologies">
               <div class="portfolio-overlay">
                 <div class="portfolio-info">
-                  <h2 class="wow fadeInUp">Portfolio Name</h2>
+                  <h2 class="wow fadeInUp">Nexnova Technologies</h2>
                 </div>
               </div>
             </a>
@@ -610,7 +610,7 @@ License: https://nexnovatechnologies.com/license
               <img src="img/portfolio/2.webp" alt="Nexnova Technologies.com">
               <div class="portfolio-overlay">
                 <div class="portfolio-info">
-                  <h2 class="wow fadeInUp">Portfolio Name</h2>
+                  <h2 class="wow fadeInUp">Nexnova Technologies</h2>
                 </div>
               </div>
             </a>
@@ -623,7 +623,7 @@ License: https://nexnovatechnologies.com/license
               <img src="img/portfolio/3.webp" alt="Nexnova Technologies.in">
               <div class="portfolio-overlay">
                 <div class="portfolio-info">
-                  <h2 class="wow fadeInUp">Portfolio Name</h2>
+                  <h2 class="wow fadeInUp">Nexnova Technologies</h2>
                 </div>
               </div>
             </a>
@@ -636,7 +636,7 @@ License: https://nexnovatechnologies.com/license
               <img src="img/portfolio/4.webp" alt="Nexnova Technologies">
               <div class="portfolio-overlay">
                 <div class="portfolio-info">
-                  <h2 class="wow fadeInUp">Portfolio Name</h2>
+                  <h2 class="wow fadeInUp">Nexnova Technologies</h2>
                 </div>
               </div>
             </a>
@@ -649,7 +649,7 @@ License: https://nexnovatechnologies.com/license
               <img src="img/portfolio/5.webp" alt="Nexnova Technologies">
               <div class="portfolio-overlay">
                 <div class="portfolio-info">
-                  <h2 class="wow fadeInUp">Portfolio Name</h2>
+                  <h2 class="wow fadeInUp">Nexnova Technologies</h2>
                 </div>
               </div>
             </a>
@@ -662,7 +662,7 @@ License: https://nexnovatechnologies.com/license
               <img src="img/portfolio/6.webp" alt="Nexnova Technologies">
               <div class="portfolio-overlay">
                 <div class="portfolio-info">
-                  <h2 class="wow fadeInUp">Portfolio Name </h2>
+                  <h2 class="wow fadeInUp">Nexnova Technologies</h2>
                 </div>
               </div>
             </a>
@@ -675,7 +675,7 @@ License: https://nexnovatechnologies.com/license
               <img src="img/portfolio/7.webp" alt="Nexnova Technologies">
               <div class="portfolio-overlay">
                 <div class="portfolio-info">
-                  <h2 class="wow fadeInUp">Portfolio Name </h2>
+                  <h2 class="wow fadeInUp">Nexnova Technologies</h2>
                 </div>
               </div>
             </a>
@@ -688,7 +688,7 @@ License: https://nexnovatechnologies.com/license
               <img src="img/portfolio/8.webp" alt="Nexnova Technologies">
               <div class="portfolio-overlay">
                 <div class="portfolio-info">
-                  <h2 class="wow fadeInUp">Portfolio Name</h2>
+                  <h2 class="wow fadeInUp">Nexnova Technologies</h2>
                 </div>
               </div>
             </a>
